--- a/apps/data/templates/css.html
+++ b/apps/data/templates/css.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="module-info" content="status=plan" />
     <title>测试组件</title>
 
+    <!-- 本组件需要以下文件 -->
     <link rel="stylesheet" type="text/css" href="tpl.css" />
+    <!-- 本组件需要以上文件 -->
 
     <script src="~/apps/demo/demo.js" type="text/javascript"></script>
 </head>
