--- a/apps/data/templates/docs.html
+++ b/apps/data/templates/docs.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="module-info" content="status=plan" />
     <title>文档</title>
-
+    
     <script src="~/src/boot.js" type="text/javascript"></script>
 
     <script src="~/apps/demo/demo.js" type="text/javascript"></script>
