--- a/apps/data/templates/js.html
+++ b/apps/data/templates/js.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="module-info" content="status=plan" />
     <title>测试组件</title>
 
+    <!-- 本组件需要以下文件 -->
     <script type="text/javascript" src="tpl.js"></script>
+    <!-- 本组件需要以上文件 -->
 
     <script type="text/javascript" src="~/apps/demo/demo.js"></script>
 </head>
